src/test/resources/wacc_examples/invalid/semanticErr/classes/classDoubleNames.wacc
# variables with the same name are declared in a class

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
  class c {
    int t,
    int t,
    char t
  }
  skip
end
